--- a/style.css
+++ b/style.css
@@ -3,10 +3,9 @@
   text-align: right;
 }
 #container1{
-    background-image: url("https://images.unsplash.com/photo-1508317469940-e3de49ba902e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=137b1b593ba99716c7cdefcfd300b064&auto=format&fit=crop&w=750&q=80");
-  background-position: center center ;
+    img-position: center center ;
   background-attachment: fixed;
-  background-size: cover;
+ img-size: cover;
   height:400px;
     /* or whatever width you want. */
    display: block;
