--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
   text-align: right;
 }
 #container1{
-    img-position: center center ;
+    background-image: url("lakme.jpg");
+  background-position: center center ;
   background-attachment: fixed;
- img-size: cover;
+  background-size: cover;
   height:400px;
     /* or whatever width you want. */
    display: block;
 }
+
