--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   text-align: right;
 }
 #container1{
-    background-image: url("lakme.jpg");
+    background-image: url(lakme.jpg);
   background-position: center center ;
   background-attachment: fixed;
   background-size: cover;
