--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 {
   text-align: right;
 }
-#container1{
-    background-image: url(lakme.jpg);
+.container1{
+    background-image: url("lakme.jpg");
   background-position: center center ;
   background-attachment: fixed;
   background-size: cover;
